# Haricot

./: .gitignore  CMakeLists.txt  README.md  configure  debian.cmake  haricot  setup.zsh  setup_install.zsh  setup_package.zsh
cmake/: ConfigVersion.cmake  __init__.py.in  customMacro.cmake  pkg-config.cmake  python.cmake
src/: CMakeLists.txt
src/a_lib/: CMakeLists.txt  debian.cmake  setup.py
src/a_lib/include/a_lib/: lib.hpp
src/a_lib/scripts/: a_test.py
src/a_lib/src/: lib.cpp
src/a_lib/src/a_lib/: a_lib.py
src/g_app/: CMakeLists.txt  debian.cmake
src/g_app/scripts/: test.py
src/g_app/src/: app.cpp
src/g_app/src/g_app/: app.py
src/haricot/: CMakeLists.txt  debian.cmake  haricot  setup.zsh  setup_install.zsh  setup_local.zsh
src/haricot/cmake/: TopLevelCMake.txt  customMacro.cmake  python.cmake
src/haricot/cmake/stm32/: stm32l4xx.cmake
src/qplot/: CMakeLists.txt  debian.cmake
src/qplot/src/: qcustomplot.cpp
src/qplot_test/: CMakeLists.txt
src/qplot_test/include/qplot_test/: mainwindow.h
src/qplot_test/ressources/: mainwindow.ui
src/qplot_test/src/: main.cpp  mainwindow.cpp
src/z_lib/: CMakeLists.txt  debian.cmake  setup.py
src/z_lib/include/z_lib/: lib.hpp
src/z_lib/src/: lib.cpp
src/z_lib/src/z_lib/: z_lib.py
